--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-split": "^2.0.14",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "electron-rebuild": "^3.2.8"
+    "electron-rebuild": "^3.2.8",
+    "source-map-loader": "^4.0.0"
   }
 }
