--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "ace-builds": "^1.8.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "electron": "^19.0.8",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
+    "react-bootstrap": "^2.5.0",
     "react-collapsed": "^3.3.2",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.2.0",
