--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "electron": "^19.0.8",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-bootstrap": "^2.5.0",
     "react-collapsed": "^3.3.2",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.2.0",
-    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-split": "^2.0.14",
